--- a/nvme-rhel-10.adoc
+++ b/nvme-rhel-10.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
-permalink: nvme-rhel-10x.html
+permalink: nvme-rhel-10.html
 keywords: nvme, linux, rhel, red hat, enterprise
-summary: How to Configure NVMe-oF Host for RHEL 10x with ONTAP
+summary: How to Configure NVMe-oF Host for RHEL 10.0 with ONTAP
 ---
-= Configure RHEL 10x for NVMe-oF with ONTAP storage
+= Configure RHEL 10.0 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -15,9 +15,10 @@ summary: How to Configure NVMe-oF Host for RHEL 10x with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 10x. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. 
+.Before you begin
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 10.0. For more support and feature information, see link:hu-nvme-rhel.html[ONTAP support and features^]. 
 
-*NVMe-oF with RHEL 10x has the following known limitations:*
+*NVMe-oF with RHEL 10.0 has the following known limitations:*
 
 * DM multipath support for NVMe-oF is not supported.
 * Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces because it disconnects both root and data filesystems and might lead to system instability.
@@ -32,7 +33,7 @@ include::_include/nvme/verify-software-version-introduction.adoc[]
 
 .Steps
 
-. Install RHEL 10x on the server. After the installation is complete, verify that you are running the required RHEL 10x kernel: 
+. Install RHEL 10.0 on the server. After the installation is complete, verify that you are running the required RHEL 10.0 kernel: 
 +
 [source,cli]
 ----
@@ -574,7 +575,7 @@ nvme netapp ontapdevices -o json
 
 == Step 7: Set up secure in-band authentication
 
-Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP between a RHEL 10x host and an ONTAP controller.
+Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP between a RHEL 10.0 host and an ONTAP controller.
 
 Each host or controller must be associated with a `DH-HMAC-CHAP` key to set up secure authentication. A `DH-HMAC-CHAP` key is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. To authenticate its peer, an NVMe host or controller must recognize the key associated with the peer. 
 
@@ -593,7 +594,7 @@ Set up secure in-band authentication using the CLI.
 ----
 cat /etc/nvme/hostnqn
 ----
-. Generate the dhchap key for the RHEL 10x host.
+. Generate the dhchap key for the RHEL 10.0 host.
 +
 The following output describes the `gen-dhchap-key` command parameters:
 +
