--- a/nvme-rhel-810.adoc
+++ b/nvme-rhel-810.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
-permalink: nvme-rhel-8x.html
+permalink: nvme-rhel-810.html
 keywords: nvme, linux, rhel, red hat, enterprise
-summary: How to Configure NVMe-oF Host for RHEL 8x with ONTAP
+summary: How to Configure NVMe-oF Host for RHEL 8.10 with ONTAP
 ---
-= Configure RHEL 8x for NVMe-oF with ONTAP storage
+= Configure RHEL 8.10 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -15,12 +15,13 @@ summary: How to Configure NVMe-oF Host for RHEL 8x with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 8x. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. 
+.Before you begin
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 8.10. For more support and feature information, see link:hu-nvme-rhel.html[ONTAP support and features^]. 
 
-*NVMe-oF with RHEL 8x has the following known limitations:*
+*NVMe-oF with RHEL 8.10 has the following known limitations:*
 
 * SAN booting using the NVMe-oF protocol is not currently supported.
-* In-kernel NVMe multipath is disabled by default on NVMe-oF hosts in RHEL 8x; you must enable it manually.
+* In-kernel NVMe multipath is disabled by default on NVMe-oF hosts in RHEL 8.10; you must enable it manually.
 * NVMe/TCP is available as a technology preview due to known issues.
 
 == Step 1: Optionally, enable SAN booting
@@ -33,7 +34,7 @@ include::_include/nvme/verify-software-version-introduction.adoc[]
 
 .Steps
 
-. Install RHEL 8x on the server. After the installation is complete, verify that you are running the required RHEL 8x kernel: 
+. Install RHEL 8.10 on the server. After the installation is complete, verify that you are running the required RHEL 8.10 kernel: 
 +
 [source,cli]
 ----
@@ -79,7 +80,7 @@ libnvme-1.4-3.el8.x86_64
 grubby --args=nvme_core.multipath=Y --update-kernel /boot/vmlinuz-4.18.0-553.el8_10.x86_64
 ----
 
-. On the RHEL 8x host, check the `hostnqn` string at `/etc/nvme/hostnqn`:
+. On the RHEL 8.10 host, check the `hostnqn` string at `/etc/nvme/hostnqn`:
 +
 [source,cli]
 ----
@@ -516,7 +517,7 @@ These are the known issues:
 |===
 |NetApp Bug ID	|Title	|Description	
 
-|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047^]	|RHEL 8x NVMe-oF hosts create duplicate persistent discovery controllers (PDCs)	|On NVMe-oF hosts, you can use the "nvme discover -p" command to create PDCs. When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running RHEL 8x on an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.
+|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047^]	|RHEL 8.10 NVMe-oF hosts create duplicate persistent discovery controllers (PDCs)	|On NVMe-oF hosts, you can use the "nvme discover -p" command to create PDCs. When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running RHEL 8.10 on an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.
 |===
 
 // 2024 SEP 2, ONTAPDOC-2345
