--- a/nvme-rhel-96.adoc
+++ b/nvme-rhel-96.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
-permalink: nvme-rhel-9x.html
+permalink: nvme-rhel-96.html
 keywords: nvme, linux, rhel, red hat, enterprise
-summary: How to Configure NVMe-oF Host for RHEL 9x with ONTAP
+summary: How to Configure NVMe-oF Host for RHEL 9.6 with ONTAP
 ---
-= Configure RHEL 9x for NVMe-oF with ONTAP storage
+= Configure RHEL 9.6 for NVMe-oF with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -15,9 +15,10 @@ summary: How to Configure NVMe-oF Host for RHEL 9x with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Red Hat Enterprise Linux (RHEL) 9x. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. 
+.Before you begin
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Red Hat Enterprise Linux (RHEL) 9.6. For more support and feature information, see link:hu-nvme-rhel.html[ONTAP support and features^].  
 
-*NVMe-oF with RHEL 9x has the following known limitations:*
+*NVMe-oF with RHEL 9.6 has the following known limitations:*
 
 * Avoid issuing the `nvme disconnect-all` command on systems booting from SAN over NVMe-TCP or NVMe-FC namespaces because it disconnects both root and data filesystems and might lead to system instability.
 
@@ -31,7 +32,7 @@ include::_include/nvme/verify-software-version-introduction.adoc[]
 
 .Steps
 
-. Install RHEL 9x on the server. After the installation is complete, verify that you are running the required RHEL 9x kernel: 
+. Install RHEL 9.6 on the server. After the installation is complete, verify that you are running the required RHEL 9.6 kernel: 
 +
 [source,cli]
 ----
@@ -733,7 +734,7 @@ nvme netapp ontapdevices -o json
 
 == Step 7: Set up secure in-band authentication
 
-Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP between a RHEL 9x host and an ONTAP controller.
+Beginning with ONTAP 9.12.1, secure in-band authentication is supported over NVMe/TCP between a RHEL 10.0 host and an ONTAP controller.
 
 Each host or controller must be associated with a `DH-HMAC-CHAP` key to set up secure authentication. A `DH-HMAC-CHAP` key is a combination of the NQN of the NVMe host or controller and an authentication secret configured by the administrator. To authenticate its peer, an NVMe host or controller must recognize the key associated with the peer. 
 
@@ -752,7 +753,7 @@ Set up secure in-band authentication using the CLI.
 ----
 cat /etc/nvme/hostnqn
 ----
-. Generate the dhchap key for the RHEL 9x host.
+. Generate the dhchap key for the RHEL 9.6 host.
 +
 The following output describes the `gen-dhchap-key` command parameters:
 +
@@ -952,15 +953,7 @@ DHHC-1:03:wSpuuKbBHTzC0W9JZxMBsYd9JFV8Si9aDh22k2BR/4m852vH7KGlrJeMpzhmyjDWOo0PJJ
 
 == Step 8: Review the known issues
 
-These are the known issues:
-
-[cols="20,40,40",options="header"]
-|===
-|NetApp Bug ID	|Title	|Description
-|1503468
-|In RHEL 9.1, the `nvme list-subsys` command returns repeated nvme controller list for a given subsystem	|The `nvme list-subsys` command returns a list of NVMe controllers for a given subsystem. In RHEL 9.1, this command shows controllers with their ANA state for all namespaces in the subsystem. Because ANA state is a per-namespace attribute, the command should display unique controller entries with the path state for each namespace.|
-link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1479047[1479047^]	|RHEL 9.0 NVMe-oF hosts create duplicate Persistent Discovery Controllers (PDCs)	|On NVMe-oF hosts, you can use the "nvme discover -p" command to create PDCs. When this command is used, only one PDC should be created per initiator-target combination.  However, if you are running ONTAP 9.10.1 and RHEL 9.0 with an NVMe-oF host, a duplicate PDC is created each time "nvme discover -p" is executed. This leads to unnecessary usage of resources on both the host and the target.
-|===
+There are no known issues.
 
 //ONTAPDOC-2984 26-May-2025
 //ONTAPDOC-2561 25-Nov-2024
