--- a/nvme-rhel-92.adoc
+++ b/nvme-rhel-92.adoc
@@ -15,8 +15,7 @@ summary: How to Configure NVMe-oF Host for RHEL 9.2 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-.Before you begin
-Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 9.2. For more support and feature information, see link:hu-nvme-rhel.html[ONTAP support and features^].  
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 9.2. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^].
 
 *NVMe-oF with RHEL 9.2 has the following known limitations:*
 
