--- a/hu-ol-9x.adoc
+++ b/hu-ol-9x.adoc
@@ -33,12 +33,8 @@ include::_include/hu/linux-customize-parameters.adoc[]
 
 == Step 6: Review the known issues
 
-Oracle Linux 9.x with ONTAP storage has the following known issues:
+Oracle Linux 9.3, 9.2, 9.1, and 9.0 with ONTAP storage has the following known issue:
 
-[role="tabbed-block"]
-====
-.9.3
---
 [cols="20,40,40",options="header"]
 |===
 |NetApp Bug ID	|Title	|Description
@@ -49,50 +45,6 @@ Unable to locate /usr/lib64/libHBAAPI.so library
 Make sure the package installing the library is installed & loaded
 ----
 |===
---
-
-.9.2
---
-[cols="20,40,40",options="header"]
-|===
-|NetApp Bug ID	|Title	|Description
-|https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1508554[1508554^]	|SAN LUN utility with Emulex HBA needs symbolic links from library packages	|When you execute the Linux Host Utilities CLI command - "sanlun fcp show adapter -v" on a SAN host, the command fails with an error message displaying that the library dependencies required for an host bus adapter (HBA) discovery cannot be located:
-----
-[root@hostname ~]# sanlun fcp show adapter -v
-Unable to locate /usr/lib64/libHBAAPI.so library
-Make sure the package installing the library is installed & loaded
-----
-|===
---
-
-.9.1
---
-[cols="20,40,40",options="header"]
-|===
-|NetApp Bug ID	|Title	|Description
-|https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1508554[1508554^]	|SAN LUN utility with Emulex HBA needs symbolic links from library packages	|When you execute the Linux Host Utilities CLI command - "sanlun fcp show adapter -v" on a SAN host, the command fails with an error message displaying that the library dependencies required for an host bus adapter (HBA) discovery cannot be located:
-----
-[root@hostname ~]# sanlun fcp show adapter -v
-Unable to locate /usr/lib64/libHBAAPI.so library
-Make sure the package installing the library is installed & loaded
-----
-|===
---
-
-.9.0
---
-[cols="20,40,40",options="header"]
-|===
-|NetApp Bug ID	|Title	|Description
-|https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1508554[1508554^]	|SAN LUN utility with Emulex HBA needs symbolic links from library packages	|When you execute the Linux Host Utilities CLI command - "sanlun fcp show adapter -v" on a SAN host, the command fails with an error message displaying that the library dependencies required for an host bus adapter (HBA) discovery cannot be located:
-----
-[root@hostname ~]# sanlun fcp show adapter -v
-Unable to locate /usr/lib64/libHBAAPI.so library
-Make sure the package installing the library is installed & loaded
-----
-|===
---
-====
 
 == What's next?
 
