--- a/nvme-rhel-10x.adoc
+++ b/nvme-rhel-10x.adoc
@@ -15,7 +15,56 @@ summary: How to Configure NVMe-oF Host for RHEL 10x with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 10x. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. 
+== ONTAP support and features
+
+The following ONTAP features are supported by ONTAP versions and SAN host operating systems: 
+
+[cols="40,30,30",options="header"]
+|===
+
+|ONTAP feature | Supported SAN hosts | ONTAP version
+
+|*Secure in-band authentication for NVMe/TCP* 
+a|* RHEL 10.0 
+ |Support begins with 9.12.1
+|*NVMe/TCP in addition to NVMe/FC* 
+
+Provides ONTAP details for both NVMe/FC and NVMe/TCP namespaces using the native `nvme-cli` package.
+a|* RHEL 10.0 
+ |Support begins with 9.10.1
+|*NVMe/TCP is a fully supported enterprise feature* 
+a|* RHEL 10.0 
+ |Support begins with 9.10.1 
+|*NVMe and SCSI traffic supported on the same host*
+
+Use dm-multipath for SCSI LUNs and NVMe multipath for NVMe-oF namespaces.
+a|* RHEL 10.0 
+ |Support begins with 9.4 
+|===
+
+ONTAP supports the following SAN Host features regardless of the ONTAP version running on your system setup:
+
+[cols="50,50",options="header"]
+|===
+
+|ONTAP feature | Supported SAN hosts 
+|*Native NVMe multipathing is always enabled* 
+
+ONTAP does not support Device Mapper (DM) multipath for NVMe-oF.
+a|* RHEL 10.0	 
+|*SAN booting using NVMe/FC protocol* 
+a|* RHEL 10.0 
+|*`nvme-cli` package includes auto-connect scripts*
+
+You do not need third-party scripts.
+a|* RHEL 10.0 
+|*Native udev rule in `nvme-cli` package*
+
+Provides round-robin load balancing for NVMe multipath.
+a|* RHEL 10.0 
+|===
+
+NOTE: For details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
 *NVMe-oF with RHEL 10x has the following known limitations:*
 
