--- a/nvme-rhel-overview.adoc
+++ b/nvme-rhel-overview.adoc
@@ -69,9 +69,9 @@ NOTE: For details on supported configurations, see the link:https://mysupport.ne
 
 |If your version is .. | Go to ..
 |10x
-|link:nvme-rhel-10x.html[Learn about configuring RHEL 10x^]
+|link:nvme-rhel-10x.html[Learn about configuring RHEL 10x]
 |9x 
-|link:nvme-rhel-9x.html[Learn about configuring RHEL 9x^]
+|link:nvme-rhel-9x.html[Learn about configuring RHEL 9x]
 |8x
-|link:nvme-rhel-8x.html[Learn about configuring RHEL 8x^]
+|link:nvme-rhel-8x.html[Learn about configuring RHEL 8x]
 |===
