--- a/nvme-rhel-10x.adoc
+++ b/nvme-rhel-10x.adoc
@@ -15,7 +15,7 @@ summary: How to Configure NVMe-oF Host for RHEL 10x with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 10x. For more support and feature information, see link:nvme-rhel-overview.html[RHEL ONTAP support and features^].
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for RHEL 10x. For more support and feature information, see link:nvme-rhel-overview.html[RHEL ONTAP support and features].
 
 NVMe-oF with RHEL 10x has the following known limitations:
 
