ontapdoc-3362 rhel and rocky linux

--- a/nvme-rockylinux-88.adoc
+++ b/nvme-rockylinux-88.adoc
@@ -15,7 +15,7 @@ summary: How to Configure NVMe-oF Host for Rocky Linux 8.8 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 8.8. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. 
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 8.8. For more support and feature information, see link:nvme-rockylinux-overview.html[Rocky Linux ONTAP support and features].
 
 *NVMe-oF with Rocky Linux 8.8 has the following known limitations:*
 
