--- a/nvme-rockylinux-93.adoc
+++ b/nvme-rockylinux-93.adoc
@@ -15,7 +15,7 @@ summary: How to Configure NVMe-oF Host for Rocky Linux 9.3 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 9.3. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. 
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 9.3. For more support and feature information, see link:nvme-rockylinux-overview.html[Rocky Linux ONTAP support and features].
 
 *NVMe-oF with Rocky Linux 9.3 has the following known limitations:*
 
