--- a/nvme-rockylinux-95.adoc
+++ b/nvme-rockylinux-95.adoc
@@ -15,7 +15,7 @@ summary: How to Configure NVMe-oF Host for Rocky Linux 9.5 with ONTAP
 [.lead]
 include::_include/nvme/nvme-introduction.adoc[]
 
-Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 9.5. For more support and feature information, see link:hu-nvme-index.html[NVME-oF Overview^]. 
+Learn how to configure NVMe over Fabrics (NVMe-oF) hosts for Rocky Linux 9.5. For more support and feature information, see link:nvme-rockylinux-overview.html[Rocky Linux ONTAP support and features].
 
 NVMe-oF with Rocky Linux 9.5 has no known limitations.
 
