ontapdoc-3362 peer feedback

--- a/nvme-ol-overview.adoc
+++ b/nvme-ol-overview.adoc
@@ -2,9 +2,9 @@
 sidebar: sidebar
 permalink: nvme-ol-overview.html
 keywords: nvme, oracle linux, enterprise
-summary: Learn about Oracle Linux ONTAP support and features
+summary: Learn about ONTAP support and features for Oracle Linux hosts
 ---
-= Learn about Oracle Linux ONTAP support and features
+= Learn about ONTAP support and features for Oracle Linux hosts
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -18,9 +18,10 @@ The following ONTAP features are supported by ONTAP versions and Oracle Linux SA
 [cols="40,30,30",options="header"]
 |===
 
-|ONTAP feature | Oracle Linux SAN hosts supported beginning with ..| ONTAP version supported beginning with ..
+|ONTAP feature | Oracle Linux hosts supported beginning with version ..| ONTAP version supported beginning with ..
 
-|*Secure in-band authentication for NVMe/TCP* 
+|link:https://docs.netapp.com/us-en/ontap/nvme/set-up-secure-authentication-nvme-task.html[Secure in-band authentication for NVMe/TCP^] 
+
 a|9.4 
  |9.12.1 
 |*NVMe/TCP in addition to NVMe/FC* 
@@ -33,7 +34,8 @@ a|8.3
 Use dm-multipath for SCSI LUNs and NVMe multipath for NVMe-oF namespaces.
 a|7.7 
  |9.4 
-*In-kernel NVMe multipath enabled for NVMe namespaces by default*
+|*In-kernel NVMe multipath enabled for NVMe namespaces by default*
+
 a|8.3 
  |? 
 |===
@@ -43,7 +45,7 @@ ONTAP supports the following SAN host features regardless of the ONTAP version r
 [cols="50,50",options="header"]
 |===
 
-|ONTAP feature | Oracle Linux SAN hosts supported beginning with ..
+|ONTAP feature | Oracle Linux hosts supported beginning with version ..
 |*`nvme-cli` package includes auto-connect scripts*
 
 You do not need third-party scripts.
@@ -61,11 +63,11 @@ NOTE: For details on supported configurations, see the link:https://mysupport.ne
 [cols="50,50",options="header"]
 |===
 
-|If your version is .. | Go to ..
+|If your RHEL version is .. | Go to ..
 |9x
-|link:nvme-ol-9x.html[Learn about configuring Oracle Linux 9x]
+|link:nvme-ol-9x.html[Configuring NVMe for Oracle Linux 9x]
 |8x 
-|link:nvme-ol-8x.html[Learn about configuring Oracle Linux 8x]
+|link:nvme-ol-8x.html[Configuring NVMe for Oracle Linux 8x]
 |7x
-|link:nvme-ol-7x.html[Learn about configuring Oracle Linux 7x]
+|link:nvme-ol-7x.html[Configuring NVMe for Oracle Linux 7x]
 |===
