ontapdoc-3362 rhel and rocky linux overview

--- a/nvme-rockylinux-overview.adoc
+++ b/nvme-rockylinux-overview.adoc
@@ -2,9 +2,9 @@
 sidebar: sidebar
 permalink: nvme-rockylinux-overview.html
 keywords: nvme, linux, rocky linux, red hat, enterprise
-summary: Learn about Rocky Linux ONTAP support and features
+summary: Learn about ONTAP support and features for Rocky Linux
 ---
-= Learn about Rocky Linux ONTAP support and features
+= Learn about ONTAP support and features for Rocky Linux
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -15,49 +15,51 @@ summary: Learn about Rocky Linux ONTAP support and features
 [.lead]
 The following ONTAP features are supported by ONTAP versions and Rocky Linux SAN host operating systems: 
 
-[cols="40,30,30",options="header"]
+[cols="25,25,25,25",options="header"]
 |===
 
-|ONTAP feature | Rocky Linux SAN hosts supported beginning with ..| ONTAP version supported beginning with ..
+|ONTAP feature | Rocky Linux hosts supported beginning with version ..| ONTAP version supported beginning with ..|Description
 
-|*Secure in-band authentication for NVMe/TCP* 
+|Secure in-band authentication for NVMe/TCP
 a|9.5 
  |9.12.1
-|*NVMe/TCP in addition to NVMe/FC* 
-
-Provides ONTAP details for both NVMe/FC and NVMe/TCP namespaces using the native `nvme-cli` package.
+ |
+|NVMe/TCP in addition to NVMe/FC 
 a|8.2 
  |9.10.1
-|*NVMe/TCP is a fully supported enterprise feature* 
+ |Provides ONTAP details for both NVMe/FC and NVMe/TCP namespaces using the native `nvme-cli` package.
+|NVMe/TCP is a fully supported enterprise feature
 a|9.0 
  |9.10.1 
-|*NVMe and SCSI traffic supported on the same host*
-
-Use dm-multipath for SCSI LUNs and NVMe multipath for NVMe-oF namespaces.
+ |
+|NVMe and SCSI traffic supported on the same host
 a|8.2 
  |9.4 
+ |Use dm-multipath for SCSI LUNs and NVMe multipath for NVMe-oF namespaces.
 |===
 
 ONTAP supports the following SAN host features regardless of the ONTAP version running on your system setup:
 
-[cols="50,50",options="header"]
+[cols="30,30,30",options="header"]
 |===
 
-|ONTAP feature | Rocky Linux SAN hosts supported beginning with ..
-|*Native NVMe multipathing is always enabled* 
-
-ONTAP does not support Device Mapper (DM) multipath for NVMe-oF.
-a|10.0	 
-|*SAN booting using NVMe/FC protocol* 
+|ONTAP feature | Rocky Linux hosts supported beginning with version ..| Notes
+|Native NVMe multipathing is always enabled
+a|10.0	
+|ONTAP does not support Device Mapper (DM) multipath for NVMe-oF. 
+|SAN booting using NVMe/FC protocol
 a|9.4
-|*`nvme-cli` package includes auto-connect scripts*
-
-You do not need third-party scripts.
+|
+|`nvme-cli` package includes auto-connect scripts
 a|8.2
-|*Native udev rule in `nvme-cli` package*
-
-Provides round-robin load balancing for NVMe multipath.
+|You do not need third-party scripts.
+|Native udev rule in `nvme-cli` package
 a|8.2 
+|Provides round-robin load balancing for NVMe multipath.
 |===
 
 NOTE: For details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
+
+_Related information_
+
+link:https://docs.netapp.com/us-en/ontap/san-admin/start-nvme-fc-service-svm-task.html[Learn about managing NVMe protocols]
