--- a/nvme-rhel-overview.adoc
+++ b/nvme-rhel-overview.adoc
@@ -74,6 +74,6 @@ NOTE: For details on supported configurations, see the link:https://mysupport.ne
 |link:nvme-rhel-8x.html[Configuring NVMe for RHEL 8x]
 |===
 
-_Related information_
+.Related information
 
 link:https://docs.netapp.com/us-en/ontap/san-admin/start-nvme-fc-service-svm-task.html[Learn about managing NVMe protocols]
