--- a/nvme-rockylinux-overview.adoc
+++ b/nvme-rockylinux-overview.adoc
@@ -60,6 +60,6 @@ a|8.2
 
 NOTE: For details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
 
-_Related information_
+.Related information
 
 link:https://docs.netapp.com/us-en/ontap/san-admin/start-nvme-fc-service-svm-task.html[Learn about managing NVMe protocols]
