ontapdoc-3362 RHEL redirects

--- a/redirects/nvme-rhel-84.adoc
+++ b/redirects/nvme-rhel-84.adoc
@@ -1,4 +1,4 @@
 ---
-permalink: nvme-rhel-8x.html
-redirect: ontap-sanhost/nvme-rhel-84.html
+permalink: nvme-rhel-84.html
+redirect: ontap-sanhost/nvme-rhel-8x.html
 ---
