--- a/redirects/nvme-rhel-94.adoc
+++ b/redirects/nvme-rhel-94.adoc
@@ -1,4 +1,4 @@
 ---
-permalink: nvme-rhel-9x.html
-redirect: ontap-sanhost/nvme-rhel-94.html
+permalink: nvme-rhel-94.html
+redirect: ontap-sanhost/nvme-rhel-9x.html
 ---
