--- a/redirects/nvme-rhel-85.adoc
+++ b/redirects/nvme-rhel-85.adoc
@@ -1,4 +1,4 @@
 ---
-permalink: nvme-rhel-8x.html
-redirect: ontap-sanhost/nvme-rhel-85.html
+permalink: nvme-rhel-85.html
+redirect: ontap-sanhost/nvme-rhel-8x.html
 ---
