--- a/nvme-proxmox-index.adoc
+++ b/nvme-proxmox-index.adoc
@@ -13,7 +13,7 @@ summary: Learn about ONTAP support and features for Proxmox hosts
 :imagesdir: ./media/
 
 [.lead]
-The following ONTAP features are supported by ONTAP versions and Proxmox SAN host operating systems for configuration with NVMe. 
+The following ONTAP features are supported by ONTAP versions and Proxmox SAN host operating systems for configuration with NVMe over Fabrics (NVMe-oF) protocols. 
 
 [cols="30,20,20,30",options="header"]
 |===
