--- a/_include/hu/linux-ol-multipathing-chk-config-aff-fas.adoc
+++ b/_include/hu/linux-ol-multipathing-chk-config-aff-fas.adoc
@@ -62,7 +62,7 @@ The following table shows the Linux OS native compiled multipath parameter setti
 multipath -ll
 ----
 +
-The default multipath parameters support AFF and FAS configurations. In these configurations, a single ONTAP LUN shouldn't require more than four paths. If there are more than four paths, it might cause issues with the paths during a storage failure.
+The default multipath parameters support AFF and FAS configurations. In these configurations, a single ONTAP LUN shouldn't require more than four paths. Having more than four paths can cause problems during a storage failure.
 +
 An AFF or FAS configuration should have two groups of paths with higher and lower priorities. Higher priority Active/Optimized paths are served by the controller where the aggregate is located. Lower priority paths are active but non-optimized because they are served by a different controller. Non-optimized paths are only used when optimized paths aren’t available.
 +
