--- a/hu_veritas_8x.adoc
+++ b/hu_veritas_8x.adoc
@@ -2,9 +2,9 @@
 sidebar: sidebar
 permalink: hu_veritas_8x.html
 keywords: host utilities, veritas, infoscale, 8, netapp, ontap, sanhost, iscsi, red, hat linux, oracle, linux
-summary: Provides guidance on ONTAP SAN host configuration settings for the Veritas Infoscale 7 series release
+summary: Use Linux Host Utilities with Veritas Infoscale 8 for RHEL and Oracle Linux hosts to help you manage FC, FCoE, and iSCSI protocol operations with ONTAP LUNs.
 ---
-= Use Veritas Infoscale 8 for Linux with ONTAP
+= Configure Veritas Infoscale 8 for FC, FCoE, and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -13,56 +13,35 @@ summary: Provides guidance on ONTAP SAN host configuration settings for the Veri
 :imagesdir: ./media/
 
 [.lead]
-You can use ONTAP SAN host configuration settings for the Veritas Infoscale storage foundation 8 series release for Red Hat Enterprise Linux and Oracle Linux (Red Hat Compatible Kernel based) platforms with FC, FCoE, and iSCSI protocols.
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. Use the Linux Host Utilities with Veritas Infoscale 8 for Red Hat Enterprise Linux (RHEL) and Oracle Linux (Red Hat Compatible Kernel based) hosts to support managing FC, FCoE, and iSCSI protocol operations with ONTAP LUNs.
 
-== Install the Linux Host Utilities
+include::_include/hu/veritas-enable-san-boot.adoc[]
 
-include::_include/hu/reuse_hu_installing_luhu_without32.adoc[]
+include::_include/hu/install-linux-host-utilities-80.adoc[]
 
-== SAN Toolkit
+== Step 3: Confirm the multipath configuration for your host
 
-include::_include/hu/reuse_hu_san_toolkit_withoutexample.adoc[]
+You can use Veritas Dynamic Multipathing (VxDMP) to manage ONTAP LUNs.
 
-.Example
-In the following illustration, the `sanlun show` command returns LUN information.
+To ensure that multipathing is configured correctly for your host, you need to claim NetApp LUNs as Veritas multipath devices and verify the Array Support Library (ASL) and the Array Policy Module (APM) configuration.
 
-----
-# sanlun show -p -v SFRAC:/vol/fen1/lun1
-
-              ONTAP Path: SFRAC:/vol/fen1/lun1
-                     LUN: 0
-                LUN Size: 10g
-                 Product: cDOT
-                DMP NODE: sfrac0_47
-      Multipath Provider: Veritas
-----------  ------  ---------  ------  -------------------------------------
-Veritas     host    vserver    host:
-path        path    path     /dev/   chan:     vserver           major:
-state       state   type     node    id:lun    LIF                   minor
-----------  ------  ---------  ------  -------------------------------------
-enabled     up      active/non-optimized sdea   14:0:1:0   lif_10    128:32
-enabled (a) up      active/optimized     sdcj   14:0:0:0   lif_2      69:112
-enabled (a) up      active/optimized     sdb    13:0:0:0   lif_1       8:16
-enabled     up      active/non-optimized sdas   13:0:1:0   lif_9      66:192
-----
-
-== SAN Booting
+NOTE: For heterogenous multipath environments, including Veritas Infoscale, Linux Native Device Mapper, and LVM volume manager, refer to the Veritas Product Administration documentation for the configuration settings.
 
 .Before you begin
-If you decide to use SAN booting, it must be supported by your configuration. You can use the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
-
-Refer to Veritas Support Portal (Product Matrix, Platform Lookup, HCL Matrix) to verify SAN Boot configuration supportability and known caveats.
+Ensure your configuration meets the system requirements. See the Interoperability Matrix Tool and the Veritas HCL Matrix.
 
 .Steps
 
-include::_include/hu/reuse_hu_san_booting_steps.adoc[]
-
-== Multipathing
-You must verify that your configuration meets the system requirements. For more information, see the Interoperability Matrix Tool and the Veritas HCL Matrix.
-
-.Example
-
-In the following example, the `vxdmpadm` command is used to verify that the VxDMP Multipath has the ONTAP target array attached.
+. Verify the ONTAP target array is attached to the VxDMP multipath:
++
+[source,cli]
+----
+vxdmpadm
+----
++
+.Show example
+[%collapsible]
+====
 ----
 # vxdmpadm listenclosure
 ENCLR_NAME   ENCLR_TYPE  ENCLR_SNO     STATUS      ARRAY_TYPE    LUN_COUNT    FIRMWARE
@@ -73,10 +52,15 @@ NAME       STATE    ENCLR-TYPE  PATHS  ENBL  DSBL ENCLR-NAME
 ===================================================================
 sfrac0_47  ENABLED  SFRAC       4      4     0    sfrac0
 ----
-With Veritas Dynamic Multipathing (VxDMP), you must perform configuration tasks to claim NetApp LUNs as Veritas Multipath Devices. You must have the Array Support Library (ASL) and the Array Policy Module (APM) packages installed that Veritas provides for NetApp storage systems. While the Veritas Software Installation loads the default ASL APM packages along with the product, it is recommended to use the latest supported packages listed on Veritas support portal.
+====
 
-.Example
+. When you install the Veritas software, it loads the default ASL and APM packages. NetApp recommends that you use the latest supported packages listed on the Veritas support portal
++
 The following example displays the Veritas Support Library (ASL) and the Array Policy Module (APM) configuration.
++
+.Show example
+[%collapsible]
+====
 ----
 # vxdmpadm list dmpnode dmpnodename=sfrac0_47 | grep asl
 asl        = libvxnetapp.so
@@ -93,49 +77,9 @@ VID         NETAPP
 PID         All
 ARRAY_TYPE  ALUA, A/A
 ----
-
-== All SAN Array Configuration
-In All SAN Array (ASA) configurations, all paths to a given Logical Unit (LUN) are active and optimized. This means I/O can be served through all paths at the same time, thereby enabling better performance.
-
-.Example
-
-The following example displays the correct output for an ONTAP LUN:
-----
-# vxdmpadm getsubpaths dmpnodename-sfrac0_47
-NAME  STATE[A]   PATH-TYPE[M]   CTLR-NAME   ENCLR-TYPE  ENCLR-NAME  ATTRS  PRIORITY
-===================================================================================
-sdas  ENABLED (A)    Active/Optimized c13   SFRAC       sfrac0     -      -
-sdb   ENABLED(A) Active/Optimized     c14   SFRAC       sfrac0     -      -
-sdcj  ENABLED(A)  Active/Optimized     c14   SFRAC       sfrac0     -      -
-sdea  ENABLED (A)    Active/Optimized c14   SFRAC       sfrac0     -
-----
-
-NOTE: Do not use an excessive number of paths to a single LUN. No more than 4 paths should be required. More than 8 paths might cause path issues during storage failures.
-
-== Non-ASA Configuration
-For non-ASA configuration there should be two groups of paths with different priorities. The paths with higher priorities are Active/Optimized. This means they are serviced by the controller where the aggregate is located. The paths with lower priorities are active but non-optimized because they are served from a different controller. The non-optimized paths are only used when optimized paths are not available.
-
-.Example
-The following example displays the correct output for an ONTAP LUN with two Active/Optimized paths and two Active/Non-Optimized paths:
-----
-# vxdmpadm getsubpaths dmpnodename-sfrac0_47
-NAME  STATE[A]   PATH-TYPE[M]   CTLR-NAME   ENCLR-TYPE  ENCLR-NAME  ATTRS  PRIORITY
-===================================================================================
-sdas  ENABLED     Active/Non-Optimized c13   SFRAC       sfrac0     -      -
-sdb   ENABLED(A)  Active/Optimized     c14   SFRAC       sfrac0     -      -
-sdcj  ENABLED(A)  Active/Optimized     c14   SFRAC       sfrac0     -      -
-sdea  ENABLED     Active/Non-Optimized c14   SFRAC       sfrac0     -      -
-----
-
-NOTE: Do not use an excessive number of paths to a single LUN. No more than 4 paths should be required. More than 8 paths might cause path issues during storage failures.
-
-=== Recommended Settings
-
-==== Settings for Veritas Multipath
-
-NetApp recommends the following Veritas VxDMP tunables for optimum system configuration in storage failover operations.
-
-
+====
+. For optimum system configuration in storage failover operations, verify that you have the following Veritas VxDMP tunables:
++
 [cols=2*,options="header"]
 |===
 | Parameter
@@ -145,16 +89,24 @@ NetApp recommends the following Veritas VxDMP tunables for optimum system config
 | dmp_restore_interval | 60
 |===
 
-DMP tunables are set online by using the `vxdmpadm` command as follows:
-
-`# vxdmpadm settune dmp_tunable=value`
-
-The values of these tunable can be verified dynamically by using `#vxdmpadm gettune`.
-
-.Example
-
-The following example shows the effective VxDMP tunables on the SAN host.
-
+. Set the DMP tunables:
++
+[source,cli]
+----
+# vxdmpadm settune dmp_tunable=value
+----
+. Verify that the tunables are set correctly:
++
+[source,cli]
+----
+# vxdmpadm gettune
+----
++
+The following example shows the effective VxDMP tunables on a SAN host.
++
+.Show example
+[%collapsible]
+====
 ----
 # vxdmpadm gettune
 
@@ -185,13 +137,21 @@ dmp_monitor_ownership               on                on
 dmp_monitor_fabric                  on                on
 dmp_native_support                 off               off
 ----
+====
 
-==== Settings by protocol
-
-* For FC/FCoE only:  Use the default timeout values.
-* For iSCSI only: Set the `replacement_timeout` parameter value to 120.
+. Set the protocol timeout values:
 +
-The iSCSI `replacement_timeout` parameter controls how long the iSCSI layer should wait for a timed-out path or session to reestablish itself before failing any commands on it.  Setting the value of `replacement_timeout` to 120 in the iSCSI configuration file is recommended.
+[role="tabbed-block"]
+====
+.FC/FCoE
+--
+Use the default timeout values.
+--
+.iSCSI 
+--
+Set the `replacement_timeout` parameter value to 120.
+
+The iSCSI `replacement_timeout` parameter controls how long the iSCSI layer should wait for a timed-out path or session to reestablish itself before failing any commands on it. Setting the value of `replacement_timeout` to 120 in the iSCSI configuration file is recommended.
 
 .Example
 
@@ -199,22 +159,78 @@ The iSCSI `replacement_timeout` parameter controls how long the iSCSI layer shou
 # grep replacement_timeout /etc/iscsi/iscsid.conf
 node.session.timeo.replacement_timeout = 120
 ----
+--
+====
 
-==== Settings by OS platforms
-
-For Red Hat Enterprise Linux 7 and 8 series, you must configure `udev rport` values to support the Veritas Infoscale environment in storage failover scenarios. Create the file `/etc/udev/rules.d/40-rport.rules` with the following file content:
-
+. Set the RHEL host "rport" values:
++
+Configure `udev rport` values to support the Veritas Infoscale environment in storage failover scenarios. 
++
+Create the file `/etc/udev/rules.d/40-rport.rules` with the following file content:
++
 ----
 # cat /etc/udev/rules.d/40-rport.rules
 KERNEL=="rport-*", SUBSYSTEM=="fc_remote_ports", ACTION=="add", RUN+=/bin/sh -c 'echo 20 > /sys/class/fc_remote_ports/%k/fast_io_fail_tmo;echo 864000 >/sys/class/fc_remote_ports/%k/dev_loss_tmo'"
 ----
-
++
 NOTE: For all other settings specific to Veritas, refer to the standard Veritas Infoscale product documentation.
 
-== Multipath Coexistence
 
-If you have a heterogenous multipath environment including Veritas Infoscale, Linux Native Device Mapper, and LVM volume manager, refer to the Veritas Product Administration documentation for configuration settings.
+. Verify the parameter settings and path status for your ONTAP LUNs:
++
+In AFF, FAS, or ASA configurations, a single ONTAP LUN shouldn't require more than four paths. Having more than four paths can cause problems during a storage failure.
++
+The following examples show the correct parameter settings and path status for ONTAP LUNs in an ASA, AFF, or FAS configuration.
++
+[role="tabbed-block"]
+=====
+.ASA configuration
+--
+An ASA configuration optimizes all paths to a given LUN, keeping them active. This improves performance by serving I/O operations through all paths at the same time.
 
-== Known issues
+.Show example
+[%collapsible]
+====
+----
+# vxdmpadm getsubpaths dmpnodename-sfrac0_47
+NAME  STATE[A]   PATH-TYPE[M]   CTLR-NAME   ENCLR-TYPE  ENCLR-NAME  ATTRS  PRIORITY
+===================================================================================
+sdas  ENABLED (A)    Active/Optimized c13   SFRAC       sfrac0     -      -
+sdb   ENABLED(A) Active/Optimized     c14   SFRAC       sfrac0     -      -
+sdcj  ENABLED(A)  Active/Optimized     c14   SFRAC       sfrac0     -      -
+sdea  ENABLED (A)    Active/Optimized c14   SFRAC       sfrac0     -
+----
+====
+--
 
-There are no known issues for the Veritas Infoscale 8 for Linux with ONTAP release.
+.AFF or FAS configuration
+--
+An AFF or FAS configuration should have two groups of paths with higher and lower priorities. Higher priority Active/Optimized paths are served by the controller where the aggregate is located. Lower priority paths are active but non-optimized because they are served by a different controller. Non-optimized paths are only used when optimized paths aren’t available.
+
+The following example displays the output for an ONTAP LUN with two Active/Optimized paths and two Active/Non-Optimized paths:
+
+.Show example
+[%collapsible]
+====
+----
+# vxdmpadm getsubpaths dmpnodename-sfrac0_47
+NAME  STATE[A]   PATH-TYPE[M]   CTLR-NAME   ENCLR-TYPE  ENCLR-NAME  ATTRS  PRIORITY
+===================================================================================
+sdas  ENABLED     Active/Non-Optimized c13   SFRAC       sfrac0     -      -
+sdb   ENABLED(A)  Active/Optimized     c14   SFRAC       sfrac0     -      -
+sdcj  ENABLED(A)  Active/Optimized     c14   SFRAC       sfrac0     -      -
+sdea  ENABLED     Active/Non-Optimized c14   SFRAC       sfrac0     -      -
+----
+====
+--
+=====
+
+== Step 4: Known issues
+
+There are no known issues.
+
+== What's next?
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/asm-mirroring.adoc[]
