--- a/hu-proxmox-9x.adoc
+++ b/hu-proxmox-9x.adoc
@@ -2,9 +2,9 @@
 sidebar: sidebar
 permalink: hu-proxmox-9x.html
 keywords: proxmox 9.0, netapp, ontap, iscsi, fcp
-summary: Install Linux Host Utilities on a Proxmox 9.0 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+summary: Install Linux Host Utilities on a Proxmox VE 9.0 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
-= Configure Proxmox 9.0 for FCP and iSCSI with ONTAP storage
+= Configure Proxmox VE 9.0 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -13,19 +13,19 @@ summary: Install Linux Host Utilities on a Proxmox 9.0 host to manage FCP and iS
 :imagesdir: ./media/
 
 [.lead] 
-Configure Proxmox 9.0 for multipathing and with specific parameters and settings for FCP and iSCSI protocol operations with ONTAP storage.
+Configure Proxmox VE 9.0 for multipathing and with specific parameters and settings for FCP and iSCSI protocol operations with ONTAP storage.
 
 [NOTE]
 ====
-The following steps are not supported with Proxmox 9.0:
+The following steps are not supported with Proxmox VE 9.0:
 
 * Using the Linux Host Utilities software to manage FCP and iSCSI protocol operations
-* Enabling SAN booting to simplify deployment and improve scalability.  
+* Using SAN boot configuration to simplify deployment and improve scalability.  
 ====
 
 == Step 1: Confirm the multipath configuration for your host
 
-You can use multipathing with Proxmox 9.0 to manage ONTAP LUNs.
+You can use multipathing with Proxmox VE 9.0 to manage ONTAP LUNs.
 
 include::_include/hu/proxmox-multipathing.adoc[]
 
